crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_enable_background__cleanup_enable_background-2.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_enable_background.rs
expression: "test_config(r#\"{ \"cleanupEnableBackground\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"50\" height=\"50\" enable-background=\"new 0 0 100 50\">\n    <!-- Keep svg's enable-background on mis-matching size -->\n    <defs>\n        <filter id=\"ShiftBGAndBlur\">\n            <feOffset dx=\"0\" dy=\"75\"/>\n        </filter>\n    </defs>\n    test\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" enable-background="new 0 0 100 50">
    <!-- Keep svg's enable-background on miss-matching size -->
    <defs>
        <filter id="ShiftBGAndBlur">
            <feOffset dx="0" dy="75"/>
        </filter>
    </defs>
    test
</svg>
