crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_enable_background__cleanup_enable_background-3.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_enable_background.rs
expression: "test_config(r#\"{ \"cleanupEnableBackground\": {} }\"#,\n        Some(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <defs>\n        <filter id=\"ShiftBGAndBlur\">\n            <feOffset dx=\"0\" dy=\"75\"/>\n        </filter>\n    </defs>\n    <mask width=\"100\" height=\"50\" enable-background=\"new 0 0 100 50\">\n        test\n    </mask>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <defs>
        <filter id="ShiftBGAndBlur">
            <feOffset dx="0" dy="75"></feOffset>
        </filter>
    </defs>
    <mask width="100" height="50" enable-background="new">
        test
    </mask>
</svg>
