crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_enable_background__cleanup_enable_background-4.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_enable_background.rs
expression: "test_config(r#\"{ \"cleanupEnableBackground\": {} }\"#,\n        Some(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <mask width=\"100\" height=\"50\" enable-background=\"new 0 0 100 50\">\n        test\n    </mask>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <mask width="100" height="50">
        test
    </mask>
</svg>
