crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_enable_background__cleanup_enable_background-5.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_enable_background.rs
expression: "test_config(r#\"{ \"cleanupEnableBackground\": {} }\"#,\n        Some(r##\"<svg height=\"100\" width=\"100\" style=\"enable-background:new 0 0 100 100\">\n  <circle cx=\"50\" cy=\"50\" r=\"40\" stroke=\"#000\" stroke-width=\"3\" fill=\"red\"/>\n</svg>\"##))?"
---
<svg height="100" width="100" style="enable-background:new 0 0 100 100">
  <circle cx="50" cy="50" r="40" stroke="#000" stroke-width="3" fill="red"></circle>
</svg>
