crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__cleanup_enable_background__cleanup_enable_background.snap
---
source: crates/oxvg_optimiser/src/jobs/cleanup_enable_background.rs
expression: "test_config(r#\"{ \"cleanupEnableBackground\": {} }\"#,\n        Some(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"100.5\" height=\".5\" enable-background=\"new 0 0 100.5 .5\">\n    <defs>\n        <filter id=\"ShiftBGAndBlur\">\n            <feOffset dx=\"0\" dy=\"75\"/>\n        </filter>\n    </defs>\n    test\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="100.5" height=".5">
    <defs>
        <filter id="ShiftBGAndBlur">
            <feOffset dx="0" dy="75"></feOffset>
        </filter>
    </defs>
    test
</svg>
